introducing music hover and horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     width: 200px;
     height: calc(100vh - 80px);
     color: #808080;
@@ -156,7 +156,7 @@ header .account h2 i{
 }
 
 main{
-    width: calc(100vw - 200px);
+    width: calc(100% - 200px);
     margin-left: 200px;
     height: calc(100% - 140px);
     margin-bottom: 80px;
@@ -167,8 +167,9 @@ main{
     top: 0;
     right: 0;
     height: 60px;
-    width: calc(100vw - 200px);
+    width: calc(100% - 200px);
     text-align: end;
+    z-index: 1;
 }
 
 .upgrade-bar button{
@@ -206,7 +207,7 @@ main span{
 }
 
 main .content{
-    width: calc(100vw - 200px);
+    width: 100%;
     margin-top: 60px;
 }
 
@@ -248,6 +249,18 @@ main .album img{
     width: 100%;
 }
 
+main .album .square{
+    top: 0;
+    left: 0;
+    background-color: #080b12;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    color: white;
+    font-size: 4rem;
+    padding-top: calc(50% - 40px);
+}
+
 main .album h3{
     color: white;
     font-size: .8rem;
@@ -274,7 +287,7 @@ footer{
     bottom: 0;
     left: 0;
     z-index: 3;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     padding: 20px 10px;
     color: #808080;
@@ -508,6 +521,7 @@ QUERY INDICATIONS desktop to mobile
     main .content{
         width: calc(100vw - 40px);
         margin-top: 60px;
+        min-width: 240px;
     }
 
     main .content nav:first-child ul{
@@ -523,10 +537,11 @@ QUERY INDICATIONS desktop to mobile
         min-width: 90px;
     }
 
+    main .recently-played .album,
     main .selected-for-user .album,
     main .popular-artists .album{
         margin-right: 5%;
-        min-width: 100px;
+        min-width: 80px;
     }
 
     footer .music-banner{
